k8s/overlays/dependencies-prod/osrm.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: osrm
  namespace: predictivemovement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osrm
  serviceName: osrm
  template:
    metadata:
      labels:
        app: osrm
    spec:
      containers:
        - image: osrm/osrm-backend:v5.22.0
          name: osrm
          command: ["/bin/sh"]
          args:
            - -c
            - |
              apt-get update && apt-get install -y --no-install-recommends wget tar && \
              wget --no-check-certificate --debug "${DOWNLOAD_URL}" -O /data/sweden-latest.osm.pbf && \
              rm -rf /var/lib/apt/lists/* && \
              osrm-extract -p /opt/car.lua /data/sweden-latest.osm.pbf && \
              osrm-partition /data/sweden-latest.osrm && \
              osrm-customize /data/sweden-latest.osrm && \
              osrm-routed --algorithm mld --max-table-size 10000 /data/sweden-latest.osrm
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: osrm-data
              mountPath: "/data"
  volumeClaimTemplates:
    - metadata:
        name: osrm-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: "10Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: osrm
  namespace: predictivemovement
  labels:
    app: osrm
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: osrm
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: osrm
  namespace: predictivemovement
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - osrm.iteamdev.io
      secretName: osrm-prod-tls
  rules:
    - host: "osrm.iteamdev.io"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: osrm
              servicePort: http
